# point_charge_simulation

./: .gitignore  Cargo.toml  LICENSE  build_WASM_and_copy.sh  index.html  point_charge_simulation.wasm
.github/workflows/: deploy.yaml
src/: charges.rs  geometry.rs  lib.rs  main.rs  voltmeter.rs
